org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-05-06
	- fixed issue #131: use abbreviation of organization instead of authority in the web form
	
	- fixed issue 132: add (optional) on the "uri of class" label
		But, instead of adding "optional" to the label, now the "name" field is marked with the
		red star, indicating that the name of the class is required, while the label
		for the URI of the class remains as it is. To complement, a preamble in the interface
		says that "fields marked * are required" (which used to be there in a previous version, btw).
		
	- fixed issue #129:  "Convert to RDF" button below term table
	
2009-04-20
	- Config: a useDefault flag now allows to use pre-defined parameters so I can quickly
		run ontmd and voc2rdf from within eclipse. I will configure this much better, probably
		when I start using GWT 1.6.  Also renamed Main.launch to ontmd.launch and
		created voc2rdf.launch
	
	- preliminary stuff to alert the user when closing the window page.
	
	- Converter: save copy of CSV file.
	- OntMdServiceImpl.upload: upon sucessfull upload, it renames the associated CSV (if any)
	  to a name based on the final ontology URI.  This provides a convenient mechanism to use
	  the CSV version for display purposes.
	

2009-04-16
	- Issue #118: "Difficult to fix errors reported by voc2rdf"
		As an additional improvement, now the affected cell is focused automatically.
		
	- Various GUI improvements to voc2rdf, including an icon for the popup menu associated
	  with the control columns and rows (previously those menus were not apparent). 
	  Also, simple conversion panel layout and new "download" button instead of embedding the
	  resulting RDF contents in the window. This provides: 1) simpler interface (issue #75), 
	  and 2) less memory consumption on the client.
	  
	- Incremental import so the GUI is responsive when importing big files.
		
2009-04-14